score and winner animation added

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,12 @@
     flex-direction: column;
     align-items: center;
 }
+.main-container{
+    display: flex;
+}
+.field-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
