--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 .field-container{
     display: flex;
+    justify-content: space-around;
+    width: 100%;
 }
 
