--- a/src/components/Field/Field.css
+++ b/src/components/Field/Field.css
@@ -1,16 +1,7 @@
 .field{
     display: flex;
     flex-wrap: wrap;
-    width: 700px;
-    height: 700px;
-}
-.score{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: 20px;
-    color: #808080;
-    margin: 20px auto;
+    order: 4;
 }
 .success{
     font-weight: 500;
