--- a/src/components/LeaderBoard/LeaderBoard.module.css
+++ b/src/components/LeaderBoard/LeaderBoard.module.css
@@ -1,10 +1,10 @@
-.leader-board{
+.leaderBoardClass{
     display: flex;
     flex-direction: column;
     width: 300px;
     order: 4;
 }
-.leader-board-item{
+.leaderBoardItem{
     width: 300px;
     height: 50px;
     background: #808080;
